--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -1,16 +1,18 @@
 h1,
 p {
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
-    Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-family: 'Indie Flower', regular;
 }
 
 body {
   margin: 0;
 }
 
-.main-container {
-  background-color: #a6e7ff;
+#root {
   height: 100%;
+}
+
+.main-container {
+  min-height: calc(100vh - 60px);
   background: #ffffff;
   padding: 20px;
   border: solid 10px #bdbdbd;
@@ -19,13 +21,29 @@ body {
   flex-direction: column;
 }
 
-.title {
-  text-align: center;
-  font-size: 60px;
-  color: #545454;
-  font-weight: normal;
+.content {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  width: 80%;
+  margin-right: auto;
+  margin-left: auto;
 }
 
-.divider {
-  border: solid 2px #bdbdbd;
+.title {
+  text-align: center;
+  font-size: 5em;
+  color: #545454;
+  margin-bottom: 30px;
+}
+
+@media screen and (max-width: 1200px) {
+  .content {
+    flex-direction: column;
+  }
+
+  .title {
+    font-size: 3.5em;
+    margin-bottom: 8px;
+  }
 }
