--- a/src/styles/image.css
+++ b/src/styles/image.css
@@ -4,9 +4,14 @@
 }
 
 .image-enrichment {
-  /* box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19); */
-  /* border-radius: 50%; */
-  height: 400px;
-  width: 400px;
+  width: 500px;
+  height: 500px;
   border-radius: 50%;
+}
+
+@media screen and (max-width: 1200px) {
+  .image-enrichment {
+    height: 300px;
+    width: 300px;
+  }
 }
